--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
         margin-bottom: 0.5rem;
       }
 
+      /* Keep pasted rich text scalable with +/- controls */
+      #editor-content *[style*="font-size"],
+      #editor-content font[size] {
+        font-size: inherit !important;
+      }
+
       #editor-content ul {
         list-style-type: disc;
         margin-left: 1.5rem;
